# dbSNP_to_parquet

./: .gitignore  Makefile  README.md  pyproject.toml
pyvariantdb/: __init__.py  const.py  download.py  lookup.py
pyvariantdb/assets/: Snakefile
pyvariantdb/scripts/: convert.py  dbsnp2parquet.py
