[project]
name = "pyvariantdb"
version = "1.4"
description = "A python package to download, process and access dbSNP data."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
pyvariantdb-download = "pyvariantdb.download:download_dbsnp"
pyvariantdb-snp2parquet = "pyvariantdb.scripts.convert:main"
pyvariantdb-make-dbsnp = "pyvariantdb.scripts.dbsnp2parquet:main"

# ---- build
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling >= 1.26"]
#build-backend = "hatchling.build"

[tool.setuptools.packages.find]
include = ["pyvariantdb"]

# -- pixi settings
[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64"]
preview = ["pixi-build"]

[tool.pixi.package.host-dependencies]
hatchling = "*"
setuptools = "*"

[tool.pixi.dependencies]
python = "*"
bcftools = "*"
pandas = "*"
polars = "*"
cyvcf2 = "*"
snakemake-executor-plugin-cluster-generic = "*"
snakemake = "*"
pyarrow = "*"
ipython = "*"
loguru = "*"
aria2 = "*"
python-build = "*"
[tool.pixi.pypi-dependencies]
pyvariantdb = { path = ".", editable = true}

[project.optional-dependencies]
test = ["pytest", "twine", "pre-commit", "pytest-ruff", "ruff", "grayskull"]
prod = ["pyvariantdb"]
all = ["pyvariantdb[test]"]

[tool.pixi.environments]
default = { features = ["all"], solve-group = "default" }
prod = { features = ["prod"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "0.4.*"
